--- a/TrainingApp.csproj
+++ b/TrainingApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Method\" />
+    <Folder Include="Structure\" />
   </ItemGroup>
 
 </Project>
